Adapted to Black at Mila context

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,13 +1,11 @@
 ---
 layout: archive
-title: "Publications"
+title: "Publications by Black at Mila"
 permalink: /publications/
 author_profile: true
 ---
 
-{% if site.author.googlescholar %}
-  <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
-{% endif %}
+This page showcases publications by members of the Black at Mila community. These works represent the diverse research contributions and scholarly achievements of Black researchers, students, and professionals at Mila.
 
 {% include base_path %}
 
